--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Curso Alura</title>
+		<title>Curso de DevOps da Alura</title>
 	</head>
 	<body>
 		<ul>	
 			<li>Vagrant</li>
 			<li>Docker</li>	
 			<li>Ansible</li>
-			<li>Integração Contínua</li>
+			<li>Integração Contínua: Maturidade e Produtividade  no Desenvolvimento de Software</li>
 		</ul>
 	</body>
 </html>
