--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<body>
 		<ul>	
 			<li>Vagrant: Gerenciando Máquinas Virtuais</li>
-			<li>Docker</li>	
-			<li>Ansible</li>
+			<li>Docker: Criando Containers sem dor de cabeça</li>	
+			<li>Ansible: Infraestrutura como código</li>
 			<li>Integração Contínua: Maturidade e Produtividade  no Desenvolvimento de Software</li>
 		</ul>
 	</body>
